--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body{
     margin: 0;
     padding: 0;
     background: url(/assets/img/bg-pattern-bottom-desktop.svg) no-repeat left bottom;
-    background-size: contain;
+    background-size: cover;
 }
 
 /* Layout */
